@@ -1,5 +1,7 @@
 2008-11-07  David Teller  <David.Teller@univ-orleans.fr>
 
+	* src/core/extlib/IO.ml: [copy] now uses [write_chars] / [chars_of] rather than [write_lines] / [lines_of]
+
 	* src/core/extlib/innerIO.ml: [close_out] now recursively calls [close_out] of [out_upstream]
 
 	* src/core/extlib/base64.ml: in [encode], added anonymous argument to [create_out]
